<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>r3live</name>
    <version>1.0.0</version>
    <description>R3LIVE: A Robust, Real-time, RGB-colored, LiDAR-Inertial-Visual tightly-coupled state Estimation and mapping package<</description>
    <maintainer email="fakesoulde@gmail.com">soulde</maintainer>
    <license>GPLv2</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>pcl_ros</depend>
    <depend>tf2</depend>
    <depend>livox_ros_driver2</depend>
    <build_depend>rosidl_default_generators</build_depend>

    <exec_depend>rosidl_default_runtime</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
